<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Alora-Matrimony</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_continue">Continue</string>
    <string name="msg_career_educat">Career &amp; Education</string>
    <string name="msg_privacy_secur">Privacy &amp; Security</string>
    <string name="msg_unsatisfactory">Unsatisfactory Experience</string>
    <string name="lbl_company_name">Company Name</string>
    <string name="lbl_height">Height</string>
    <string name="lbl_found_my_match">Found my match</string>
    <string name="msg_don_t_have_an_a">Don\u2019t have an account? Sign Up</string>
    <string name="lbl_user_name">User name</string>
    <string name="lbl_diet">Diet</string>
    <string name="lbl_other_reason">Other Reason</string>
    <string name="msg_diet_preference">Diet Preferences</string>
    <string name="lbl_mobile_no">Mobile no.</string>
    <string name="msg_a_little_about">A little about me...</string>
    <string name="msg_phone_no_9876">Phone No.: 9876543210</string>
    <string name="lbl_reason">Reason: </string>
    <string name="lbl_date_of_birth">Date of Birth</string>
    <string name="lbl_first_name">First name</string>
    <string name="lbl_subject">Subject</string>
    <string name="msg_father_occupati">Father occupation Mother occupation no of brothers &amp;sisters</string>
    <string name="lbl_xxx">xxx</string>
    <string name="lbl_age_xx">Age:xx</string>
    <string name="lbl_phone_number">Phone Number</string>
    <string name="msg_write_message_h">Write message here...</string>
    <string name="lbl_manage_users">Manage Users</string>
    <string name="lbl_mm">MM</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_form_content">Form Content</string>
    <string name="lbl_seen_2h_ago">Seen 2h ago</string>
    <string name="lbl_family">Family</string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="lbl_email_id">Email ID</string>
    <string name="lbl_phn_no_email_id">Phn no email id</string>
    <string name="lbl_recently_added">Recently Added</string>
    <string name="lbl_filters">Filters</string>
    <string name="lbl_item12">item1</string>
    <string name="lbl_profession">Profession</string>
    <string name="lbl_astro_details">Astro Details</string>
    <string name="lbl_how_alora_works">How Alora Works</string>
    <string name="lbl_last_name">Last name</string>
    <string name="lbl_user_name_3">User name 3</string>
    <string name="lbl_user_name_2">User name 2</string>
    <string name="lbl_dd">DD</string>
    <string name="lbl_user_name_1">User name 1</string>
    <string name="lbl_weight">Weight</string>
    <string name="msg_create_your_pro">Create Your Profile: Build a detailed profile that reflects your personality, preferences, and aspirations.
Smart Matching: Our intelligent algorithms analyze your profile and preferences to suggest compatible matches.
Engage and Connect: Initiate conversations, discover shared interests, and build connections that go beyond the surface.</string>
    <string name="lbl_confirm_delete">Confirm Delete</string>
    <string name="lbl_contact_details">Contact Details</string>
    <string name="lbl_income">Income</string>
    <string name="lbl_contact_filters">Contact Filters</string>
    <string name="lbl_send_mail">Send Mail</string>
    <string name="lbl_search_profiles">Search Profiles</string>
    <string name="lbl_my_child">My Child</string>
    <string name="lbl_city_state">City, State</string>
    <string name="lbl_birth_date">Birth Date</string>
    <string name="msg_this_profile_fo">This profile for</string>
    <string name="lbl_unmarried">unmarried</string>
    <string name="msg_diet_preference2">Diet Preferences</string>
    <string name="lbl_email_id2">Email Id</string>
    <string name="lbl_community">Community</string>
    <string name="lbl_visible_to_all">visible to all</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_item_13">Item 1</string>
    <string name="lbl_item_12">item 1</string>
    <string name="lbl_feedbacks">Feedbacks</string>
    <string name="msg_sparking_love_s">"Sparking Love's Flame"</string>
    <string name="lbl_who_we_are">Who We Are:</string>
    <string name="msg_religion_moth2">Religion &amp; Mother Toungue</string>
    <string name="lbl_hello_admin">Hello Admin, </string>
    <string name="msg_write_a_message">Write a message here . . .</string>
    <string name="lbl_reported_by">Reported by: </string>
    <string name="lbl_usr_id">Usr id</string>
    <string name="lbl_your_email">Your email</string>
    <string name="msg_alora_is_more_t">"Alora is more than just a matchmaking app; it's a community driven by a passion for fostering meaningful connections. Our team comprises dedicated individuals who understand the nuances of finding a life partner and are committed to making this process seamless and enjoyable."</string>
    <string name="msg_email_usernm_g">Email: usernm@gmail.com</string>
    <string name="lbl_age">Age</string>
    <string name="lbl_message">Message:</string>
    <string name="lbl_my_self">My Self</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_qualification">Qualification</string>
    <string name="lbl_feedback">Feedback</string>
    <string name="msg_welcome_to_the">Welcome to the world of Alora Matrimony - a revolutionary platform designed to redefine the journey of finding lifelong companionship. In a world where connections matter more than ever, Alora Matrimony emerges as the beacon of hope, seamlessly blending tradition with technology.</string>
    <string name="msg_reported_accoun">Reported Accounts</string>
    <string name="lbl_log_in">Log In</string>
    <string name="lbl_about_us">About Us</string>
    <string name="msg_here_will_be_sm">Here will be small description user has provided for their introduction like what are their interests and etc...</string>
    <string name="lbl_chats">Chats</string>
    <string name="lbl_91">+ 91</string>
    <string name="lbl_occupation">Occupation</string>
    <string name="lbl_contact_us">Contact Us</string>
    <string name="lbl_religion">Religion</string>
    <string name="lbl_age_xx3">Age: xx</string>
    <string name="lbl_age_xx2">Age :xx</string>
    <string name="lbl_lives_in">Lives In</string>
    <string name="lbl_you_work_as">You work as</string>
    <string name="msg_account_setting">Account Settings</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_my_sibling">My Sibling</string>
    <string name="lbl_marital_status">Marital Status</string>
    <string name="msg_hobbies_interes">Hobbies/Interests</string>
    <string name="lbl_college_name">College Name</string>
    <string name="lbl_annual_income">Annual Income</string>
    <string name="lbl_seen">Seen</string>
    <string name="msg_terms_conditi">Terms &amp; Conditions</string>
    <string name="msg_voice_and_video">Voice and Video call</string>
    <string name="lbl_online">Online</string>
    <string name="lbl_send_message">Send Message</string>
    <string name="msg_why_do_you_want">Why do you want to delete your profile?</string>
    <string name="lbl_email">Email</string>
    <string name="msg_highest_qualifi">Highest Qualification</string>
    <string name="lbl_my_friend">My Friend</string>
    <string name="lbl_user_id">User Id</string>
    <string name="lbl_date_of_birth2">Date of birth</string>
    <string name="lbl_manage_profiles">Manage Profiles</string>
    <string name="lbl_1">1</string>
    <string name="lbl_content_privacy">Content Privacy</string>
    <string name="lbl_yyyy">YYYY</string>
    <string name="lbl_2">2</string>
    <string name="lbl_users">Users</string>
    <string name="lbl_3">3</string>
    <string name="lbl_xx">xx</string>
    <string name="lbl_4">4</string>
    <string name="lbl_5">5</string>
    <string name="lbl_caste">Caste</string>
    <string name="lbl_taking_break">Taking break</string>
    <string name="lbl_education_field">Education Field</string>
    <string name="lbl_alora">Alora</string>
    <string name="lbl_access_denied">Access Denied</string>
    <string name="lbl_our_vision">Our Vision</string>
    <string name="msg_item_logo_1_i">item logo 1   item logo 2    item logo 3    item logo 4 </string>
    <string name="msg_welcome_to_alor">Welcome to Alora - Where Love Meets Compatibility</string>
    <string name="lbl_choose_gender">Choose Gender</string>
    <string name="lbl_all">All</string>
    <string name="lbl_diet_prefrences">Diet Prefrences</string>
    <string name="lbl_mobile_number">Mobile Number</string>
    <string name="lbl_city_state2">City, state</string>
    <string name="msg_message_goes_he">message goes here...........</string>
    <string name="lbl_today_xx_xx">Today xx:xx</string>
    <string name="lbl_hobbies">Hobbies</string>
    <string name="lbl_my_relative">My Relative</string>
    <string name="lbl_item_3">Item 3</string>
    <string name="lbl_item_4">Item 4</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_item_5">Item 5</string>
    <string name="msg_firstname_lastn">Firstname lastname</string>
    <string name="lbl_delete_account">Delete Account</string>
    <string name="msg_religion_moth">Religion &amp; Mother Toungue</string>
    <string name="lbl_item_2">Item 2</string>
    <string name="lbl_item1">item1</string>
    <string name="msg_regilion_commun">Regilion/Community</string>
    <string name="lbl_living_in">Living in</string>
    <string name="lbl_calls">Calls</string>
    <string name="msg_please_enter_valid_email">Please enter valid email</string>
    <string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
    <string name="msg_please_enter_valid_text">Please enter valid text</string>
    <string name="lbl_hello">Hello</string>
    <string name="selectDate">DD/MM/YYYY</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_state">State</string>
    <string name="lbl_sub_community">Sub Community</string>
    <string name="lbl_city">City\n</string>
    <string-array name="state">
        <item><b>Select State</b></item>
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Chandigarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="andaman_and_nicobar_islands">
        <item><b>Select City</b></item>
        <item>Port Blair</item>
        <item>South Andaman</item>
        <item>North Andaman</item>
        <item>Car Nicobar</item>
        <item>Mayabunder</item>
        <item>Great Nicobar</item>
        <item>Nancowry</item>
        <item>Hut Bay</item>
        <item>Other</item>
    </string-array>
</resources>