<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/for_proFor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".reg1_profileFor">

    <TextView
        android:id="@+id/txtThisprofilefo"
        style="@style/txtQuicksandsemibold30"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:gravity="start"
        android:letterSpacing="0.09"
        android:singleLine="true"
        android:text="@string/msg_this_profile_fo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_pro_for"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/txtChooseGender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtThisprofilefo">

        <RadioButton
            android:id="@+id/btnMySelf"
            style="@style/RadioButtonStyle"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="15dp"
            android:text="@string/lbl_my_self" />

        <RadioButton
            android:id="@+id/txtMyChild"
            style="@style/RadioButtonStyle"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="15dp"
            android:text="@string/lbl_my_child" />

        <RadioButton
            android:id="@+id/txtMyFriend"
            style="@style/RadioButtonStyle"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="15dp"
            android:text="@string/lbl_my_friend" />

        <RadioButton
            android:id="@+id/txtMySibling"
            style="@style/RadioButtonStyle"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="15dp"
            android:text="@string/lbl_my_sibling" />

        <RadioButton
            android:id="@+id/txtMyRelative"
            style="@style/RadioButtonStyle"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:text="@string/lbl_my_relative" />

    </RadioGroup>

    <TextView
        android:id="@+id/txtChooseGender"
        style="@style/txtQuicksandsemibold30"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="40dp"
        android:gravity="start"
        android:letterSpacing="0.09"
        android:singleLine="true"
        android:text="@string/lbl_choose_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_pro_for" />

    <RadioGroup
        android:id="@+id/rg_gen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChooseGender">

        <RadioButton
            android:id="@+id/txtmale"
            style="@style/RadioButtonStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/lbl_male"
            />

        <RadioButton
            android:id="@+id/txtfemale"
            style="@style/RadioButtonStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_female" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        style="@style/btnSolidRounded_1"
        android:layout_width="190dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:letterSpacing="0.06"
        android:paddingStart="30dp"
        android:paddingTop="9dp"
        android:paddingEnd="30dp"
        android:paddingBottom="11dp"
        android:text="@string/lbl_continue"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_gen"
        app:layout_constraintVertical_bias="0.699" />

</androidx.constraintlayout.widget.ConstraintLayout>
