<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".reg3_contactDetails">

    <TextView
        android:id="@+id/txtContactDetails"
        style="@style/txtQuicksandsemibold30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:gravity="start"
        android:letterSpacing="0.09"
        android:singleLine="true"
        android:text="@string/lbl_contact_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etMobile"
        style="@style/etSolidRounded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/lbl_mobile_number"
        android:inputType="phone"
        android:letterSpacing="0.06"
        android:paddingStart="11dp"
        android:paddingTop="15dp"
        android:paddingEnd="30dp"
        android:paddingBottom="14dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMobileno" />

    <TextView
        android:id="@+id/txtMobileno"
        style="@style/txtQuicksandmedium15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:gravity="start"
        android:letterSpacing="0.04"
        android:singleLine="true"
        android:text="@string/lbl_mobile_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContactDetails" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/etSolidRounded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/lbl_your_email"
        android:inputType="textEmailAddress"
        android:letterSpacing="0.06"
        android:paddingStart="11dp"
        android:paddingTop="15dp"
        android:paddingEnd="30dp"
        android:paddingBottom="14dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailid" />

    <TextView
        android:id="@+id/txtEmailid"
        style="@style/txtQuicksandmedium15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:gravity="start"
        android:letterSpacing="0.04"
        android:singleLine="true"
        android:text="@string/lbl_email_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMobile" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/etSolidRounded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:letterSpacing="0.06"
        android:paddingStart="11dp"
        android:paddingTop="15dp"
        android:paddingEnd="30dp"
        android:paddingBottom="14dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <TextView
        android:id="@+id/txtPassword"
        style="@style/txtQuicksandmedium15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:gravity="start"
        android:letterSpacing="0.04"
        android:singleLine="true"
        android:text="Password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etConPassword"
        style="@style/etSolidRounded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:letterSpacing="0.06"
        android:paddingStart="11dp"
        android:paddingTop="15dp"
        android:paddingEnd="30dp"
        android:paddingBottom="14dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtComPassword" />

    <TextView
        android:id="@+id/txtComPassword"
        style="@style/txtQuicksandmedium15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:gravity="start"
        android:letterSpacing="0.04"
        android:singleLine="true"
        android:text="Confirm Password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        style="@style/btnSolidRounded_1"
        android:layout_width="190dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:letterSpacing="0.06"
        android:paddingStart="30dp"
        android:paddingTop="9dp"
        android:paddingEnd="30dp"
        android:paddingBottom="11dp"
        android:text="@string/lbl_continue"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>
